# AI-Site

./: alembic.ini  pyproject.toml  Пояснительная записка.docx
alembic/: env.py
alembic/versions/: 79cdb7e6703b_add_token_verified.py  7cb4130fcc82_add_is_verified.py  8cc7b1e9d6a9_edit_password_users.py  f15a528984a1_add_user.py
api/: config.py  main.py
api/src/: __init__.py
api/src/auth/: convert_jwt.py  email_utils.py  endpoints.py  helpers_jwt.py  schemas.py  utils_jwt.py  validations.py
api/src/models/: db_client.py  models.py
api/src/redis/: redis_helper.py
api/src/users/: db_func.py  schemas.py
api/templates/: mail.html
frontend/: .gitignore  next.config.ts  package-lock.json  package.json
frontend/src/: constants.ts
frontend/src/jwt_api/: api.ts  authForm.tsx  crud_jwt_tokens.ts  render.tsx  schemes.ts
frontend/src/layout/: Layout.tsx  company_layout.tsx
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/pages/confirm_email/: index.tsx
frontend/src/pages/login/: index.tsx
frontend/src/pages/registration/: index.tsx
frontend/src/styles/: global.css  menu.css
frontend/src/styles/auth/: AuthForm.module.css
